kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: intrusion-frontend-service
  namespace: intrusion-detector

spec:
  selector:
    app: intrusion-frontend

  type: NodePort

  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30090
