kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intrusion-service
  namespace: intrusion-detector

spec:
  selector:
    app: intrusion-detector

  type: NodePort

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
