kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intrusion-ingress
  namespace: intrusion-detector

spec:
  rules:
    - host: intrusion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intrusion-service
                port:
                  number: 8000
